Increasing gatling javaoptions max heap size